--- a/jsonm.csproj
+++ b/jsonm.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
@@ -52,6 +53,8 @@
     <MCompile Include="jsonm.mg" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DynamicDictionary.cs" />
+    <Compile Include="DynamicDictionaryMemberBinder.cs" />
     <Compile Include="Extensions\EdgeCollectionExtensions.cs" />
     <Compile Include="JsonmArray.cs" />
     <Compile Include="JsonmConsole.cs" />
